@@ -1,0 +1,2 @@
+TRUNCATE TABLE  `sessions`;
+ALTER TABLE  `sessions` DROP  `http_user_agent_ses`;
